RESOLVED FIXED 252000
[WGSL] Prefix WGSL/ShaderModule to avoid builderrors
https://bugs.webkit.org/show_bug.cgi?id=252000
Summary [WGSL] Prefix WGSL/ShaderModule to avoid builderrors
Tadeu Zagallo
Reported 2023-02-09 11:18:16 PST
...
Attachments
Radar WebKit Bug Importer
Comment 1 2023-02-09 11:18:34 PST
Tadeu Zagallo
Comment 2 2023-02-09 11:22:54 PST
EWS
Comment 3 2023-02-09 11:44:32 PST
Committed 260074@main (5259405ac03b): <https://commits.webkit.org/260074@main> Reviewed commits have been landed. Closing PR #9879 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.