[WGSL] Prefix WGSL/ShaderModule to avoid build errors https://bugs.webkit.org/show_bug.cgi?id=252000 rdar://105231511

Reviewed by Myles C. Maxfield.

Add a prefix to `WGSL/ShaderModule.h` since the build system was occasionally
confusing it with `WebGPU/ShaderModule.h`.

I also had to prefix some `Vector`s `WGSL.h` after reordering includes due to
the renaming, since there's also a `Vector` in WGSL (which was another naming
mistake, but I'll fix that in a separate patch).

* Source/WebGPU/WGSL/AST/ASTStringDumper.cpp:
* Source/WebGPU/WGSL/AST/ASTVisitor.cpp:
* Source/WebGPU/WGSL/CallGraph.cpp:
* Source/WebGPU/WGSL/EntryPointRewriter.cpp:
* Source/WebGPU/WGSL/GlobalVariableRewriter.cpp:
* Source/WebGPU/WGSL/MangleNames.cpp:
* Source/WebGPU/WGSL/Metal/MetalFunctionWriter.cpp:
* Source/WebGPU/WGSL/Parser.cpp:
* Source/WebGPU/WGSL/ResolveTypeReferences.cpp:
* Source/WebGPU/WGSL/ShaderModule.h: Removed.
* Source/WebGPU/WGSL/TypeCheck.cpp:
* Source/WebGPU/WGSL/WGSL.cpp:
* Source/WebGPU/WGSL/WGSL.h:
* Source/WebGPU/WebGPU.xcodeproj/project.pbxproj:

Canonical link: https://commits.webkit.org/260074@main