Source/WebGPU/WGSL/AST/ASTStringDumper.cpp
@@ -27,7 +27,7 @@
 #include "ASTStringDumper.h"
 
 #include "AST.h"
-#include "ShaderModule.h"
+#include "WGSLShaderModule.h"
 #include <wtf/DataLog.h>
 #include <wtf/EnumTraits.h>
 #include <wtf/SetForScope.h>
